--- a/src/app/components/round-robin-grid/round-robin-grid.component.html
+++ b/src/app/components/round-robin-grid/round-robin-grid.component.html
@@ -1,3 +1,11 @@
 <p>
   round-robin-grid works!
 </p>
+<table>
+  <tr *ngFor="let r of gridContent">
+    <td *ngFor="let c of r">
+      {{c}}
+    </td>
+  </tr>
+</table>
+
