Improved round robin grid appearance

--- a/src/app/components/round-robin-grid/round-robin-grid.component.html
+++ b/src/app/components/round-robin-grid/round-robin-grid.component.html
@@ -1,11 +1,9 @@
-<p>
-  round-robin-grid works!
-</p>
-<table>
-  <tr *ngFor="let r of gridContent">
-    <td *ngFor="let c of r">
-      {{c}}
-    </td>
-  </tr>
-</table>
-
+<div id="round-robin-grid">
+  <table>
+    <tr *ngFor="let r of gridContent">
+      <td *ngFor="let c of r">
+        {{c}}
+      </td>
+    </tr>
+  </table>
+</div>
