Use new round robin grid format

--- a/src/app/components/round-robin-grid/round-robin-grid.component.html
+++ b/src/app/components/round-robin-grid/round-robin-grid.component.html
@@ -2,7 +2,7 @@
   <table>
     <tr *ngFor="let r of gridContent">
       <td *ngFor="let c of r">
-        {{c}}
+        {{c.content}}
       </td>
     </tr>
   </table>
