--- a/src/app/components/round-robin-grid/round-robin-grid.component.scss
+++ b/src/app/components/round-robin-grid/round-robin-grid.component.scss
@@ -1,23 +1,38 @@
 #round-robin-grid {
-    font-size: 1.5vw;
+    font-size: 2vw;
     width: 100%;
     height: 100vh;
     background: black;
     color: #ffff99;
 
-    padding: 1em 0;
+    padding: 1ex 0;
 
     display: flex;
     align-items: center;
 
+    overflow: hidden;
+
     table {
         border-collapse: collapse;
         margin: auto;
-        width: 80%;
+        width: 95%;
+        table-layout: fixed;
 
         td {
+            text-transform: uppercase;
+            width: 5ex;
+            text-overflow: clip;
             padding: .5em;
             border: 1px solid #3366cc;
         }
+
+        td:nth-child(1) {
+            width: 2ex;
+        }
+
+        td:nth-child(2) {
+            width: 12ex;
+        }
+
     }
 }
