Adding player list page so we can plan event

--- a/src/app/components/main-menu/main-menu.component.html
+++ b/src/app/components/main-menu/main-menu.component.html
@@ -1,4 +1,5 @@
 <ul>
-    <li><a href="#rr">Round robin status</a></li>
-    <li><a href="#rrms">Round robin match sheet</a></li>
+    <li><a href="#rr-grid">Round robin grid</a></li>
+    <li><a href="#rr-match-sheet">Round robin match sheet</a></li>
+    <li><a href="#event-player-list">Event player list</a></li>
 </ul>
