--- a/src/app/components/event-player-list/event-player-list.component.scss
+++ b/src/app/components/event-player-list/event-player-list.component.scss
@@ -21,6 +21,7 @@
         padding: 0;
         display: flex;
         justify-content: flex-start;
+        flex-wrap: wrap;
 
         div {
             margin: .5rem;
