WIP: Adding tournament creator part 6

--- a/src/app/components/main-menu/main-menu.component.html
+++ b/src/app/components/main-menu/main-menu.component.html
@@ -2,4 +2,5 @@
     <li><a href="#rr-grid">Round robin grid</a></li>
     <li><a href="#rr-match-sheet">Round robin match sheet</a></li>
     <li><a href="#event-player-list">Event player list</a></li>
+    <li><a href="#tournament-list">Tournament List</a></li>
 </ul>
