--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,8 @@ body {
     margin: 0;
     padding: 0;
 }
+
+/* a card is an item with some details inside */
+.item-card {
+    background-color: var(--color-header-main);
+}
