--- a/src/app/components/tournament-list/tournament-list.component.html
+++ b/src/app/components/tournament-list/tournament-list.component.html
@@ -17,7 +17,8 @@
 
         <ul>
             <li class="tournament-item item-card" *ngFor="let tournament of tournamentList">
-                {{tournament.name}}
+                <h2 class="tournament-name">{{tournament.name}}</h2>
+                <p class="tournament-date">{{tournament.tournamentDate}}</p>
             </li>
         </ul>
     </div>
