--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,9 +6,58 @@ html {
 body {
     margin: 0;
     padding: 0;
+    background-color: var(--color-background);
+    color: var(--color-text-main);
+    // font-family: 'Anton', sans-serif;
+    font-family: 'Open Sans Condensed', sans-serif;
+    text-transform: uppercase;
 }
 
-/* a card is an item with some details inside */
-.item-card {
-    background-color: var(--color-header-main);
+h1 {
+    font-weight: normal;
+    text-transform: uppercase;
+}
+
+h2 {
+    font-weight: normal;
+    text-transform: uppercase;
+}
+
+h3 {
+    font-weight: normal;
+    text-transform: uppercase;
+}
+
+h4 {
+    font-weight: normal;
+    text-transform: uppercase;
+}
+
+h5 {
+    font-weight: normal;
+    text-transform: uppercase;
+}
+
+h6 {
+    font-weight: normal;
+    text-transform: uppercase;
+}
+
+input {
+    border: none;
+    font-size: 1.5rem;
+}
+
+.left-center {
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.button:hover {
+    &:hover {
+        cursor: pointer;
+    }
+    &:active {
+        color: var(--color-text-shadow);
+    }
 }
