--- a/src/app/components/main-menu/main-menu.component.html
+++ b/src/app/components/main-menu/main-menu.component.html
@@ -3,4 +3,5 @@
     <li><a href="#rr-match-sheet">Round robin match sheet</a></li>
     <li><a href="#event-player-list">Event player list</a></li>
     <li><a href="#tournament-list">Tournament List</a></li>
+    <li><a href="#header">Header</a></li>
 </ul>
