Tournament page to include header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div id="header">
 
-    <div class="layout">
+    <div class="layout-top">
         <div class="lcars-row">
             <div class="lcars-column fill">
                 <div class="lcars-row fill">
@@ -57,40 +57,9 @@
         </div>
     </div>
 
-    <div class="content">
-        <div class="filler">
-        </div>
-        <div>
-            <p>
-                asdfa sdasd fasdf asdf asdf asdfa sdfa sdf asdfa sdfasd asd fasdf asdf asdf asdf asdfa sdfa sdf asdf asd
-                asd fasdf asdf asdf asdfasd fasdf asdf asdf asdfa sdf asdfa sdf asdf asdfa sdf asdf asdf asdf 
-                asd fasdf asdf asdf asdf 
-                asdf asdf asdf asdf asdf asdf 
-            </p>
-            <p>
-                asdfa sdasd fasdf asdf asdf asdfa sdfa sdf asdfa sdfasd asd fasdf asdf asdf asdf asdfa sdfa sdf asdf asd
-                asd fasdf asdf asdf asdfasd fasdf asdf asdf asdfa sdf asdfa sdf asdf asdfa sdf asdf asdf asdf 
-                asd fasdf asdf asdf asdf 
-                asdf asdf asdf asdf asdf asdf 
-            </p>
-            <p>
-                asdfa sdasd fasdf asdf asdf asdfa sdfa sdf asdfa sdfasd asd fasdf asdf asdf asdf asdfa sdfa sdf asdf asd
-                asd fasdf asdf asdf asdfasd fasdf asdf asdf asdfa sdf asdfa sdf asdf asdfa sdf asdf asdf asdf 
-                asd fasdf asdf asdf asdf 
-                asdf asdf asdf asdf asdf asdf 
-            </p>
-            <p>
-                asdfa sdasd fasdf asdf asdf asdfa sdfa sdf asdfa sdfasd asd fasdf asdf asdf asdf asdfa sdfa sdf asdf asd
-                asd fasdf asdf asdf asdfasd fasdf asdf asdf asdfa sdf asdfa sdf asdf asdfa sdf asdf asdf asdf 
-                asd fasdf asdf asdf asdf 
-                asdf asdf asdf asdf asdf asdf 
-            </p>
-            <p>
-                asdfa sdasd fasdf asdf asdf asdfa sdfa sdf asdfa sdfasd asd fasdf asdf asdf asdf asdfa sdfa sdf asdf asd
-                asd fasdf asdf asdf asdfasd fasdf asdf asdf asdfa sdf asdfa sdf asdf asdfa sdf asdf asdf asdf 
-                asd fasdf asdf asdf asdf 
-                asdf asdf asdf asdf asdf asdf 
-            </p>
+    <div class="layout-bottom">
+        <div class="content">
+            <ng-content></ng-content>
         </div>
     </div>
 </div>
