--- a/src/app/components/tournament/tournament-page/tournament-page.component.html
+++ b/src/app/components/tournament/tournament-page/tournament-page.component.html
@@ -1,5 +1,5 @@
 <p>
-  tournament-page works!
-
-  <app-header>this is stuff inside header</app-header>
+  <app-header>
+    <app-tournament-list></app-tournament-list>
+  </app-header>
 </p>
