--- a/src/app/components/tournament/tournament-list/tournament-list.component.scss
+++ b/src/app/components/tournament/tournament-list/tournament-list.component.scss
@@ -9,7 +9,7 @@
             }
 
             div#new-tournament-form {
-                margin: 0 1rem 1rem;
+                margin: 0 0 1rem;
                 button {
                     margin: 0 1rem;
                 }
