--- a/src/app/components/tournament/tournament-list/tournament-list.component.html
+++ b/src/app/components/tournament/tournament-list/tournament-list.component.html
@@ -1,23 +1,26 @@
 <div id="tournament-list">
     <div class="content">
-        <h2 class="lcars-title right lcars-dodger-blue-bg lcars-black-color">Tournaments</h2>
+        <h2 class="lcars-title lcars-u-5 right lcars-dodger-blue-bg lcars-black-color">Tournaments</h2>
 
         <div id="new-tournament-box">
-            <div id="accordion-add-tournament" class="button" (click)="openNewTournamentForm()">
+            <div id="accordion-add-tournament" class="button" (click)="toggleNewTournamentForm()">
                 <i class="fa fa-plus-circle"></i> Add Tournament
             </div>
-            <div id="new-tournament-form" class="lcars-row" *ngIf="isNewTournamentFormOpen">
-                <div class="lcars-bracket lcars-vu-3 left"></div>
-                <div class="lcars-column">
-                    <div class="lcars-element full-centered lcars-eggplant-bg">Name</div>
-                    <div class="lcars-element lcars-eggplant-bg">Date</div>
-                    <div id="button-add-tournament" class="lcars-element button" (click)="addTournament()">Add</div>
+            <div id="new-tournament-form" class="lcars-column" *ngIf="isNewTournamentFormOpen">
+                <div class="lcars-row">
+                    <div class="lcars-bracket lcars-vu-3 left"></div>
+                    <div class="lcars-column">
+                        <div class="lcars-element full-centered lcars-eggplant-bg">Name</div>
+                        <div class="lcars-element lcars-eggplant-bg">Date</div>
+                        <div id="button-add-tournament" class="lcars-element button" (click)="addTournament()">Add</div>
+                    </div>
+                    <div class="lcars-column">
+                        <input id="input-new-name" class="lcars-element left lcars-u-2 lcars-periwinkle-bg" type="text" size="48" [(ngModel)]="inputNewName">
+                        <input id="input-new-tournament-date" class="lcars-element lcars-u-2  lcars-periwinkle-bg" type="text" size="10" [(ngModel)]="inputNewTournamentDate">
+                        <div id="button-add-tournament-cancel" class="lcars-element button" (click)="closeNewTournamentForm()">Cancel</div>
+                    </div>
                 </div>
-                <div class="lcars-column">
-                    <input id="input-new-name" class="lcars-element left lcars-u-2 lcars-periwinkle-bg" type="text" size="48" [(ngModel)]="inputNewName">
-                    <input id="input-new-tournament-date" class="lcars-element lcars-u-2  lcars-periwinkle-bg" type="text" size="10" [(ngModel)]="inputNewTournamentDate">
-                    <div id="button-add-tournament-cancel" class="lcars-element button" (click)="closeNewTournamentForm()">Cancel</div>
-                </div>
+                <div class="lcars-element lcars-u-5">{{errorMessage}}</div>
             </div>
         </div>
 
