--- a/src/app/components/tournament/tournament-list/tournament-list.component.html
+++ b/src/app/components/tournament/tournament-list/tournament-list.component.html
@@ -2,6 +2,9 @@
     <div class="content">
         <h2 class="lcars-title lcars-u-5 right lcars-dodger-blue-bg lcars-black-color">Tournaments</h2>
 
+        <div id="input-error-message" class="lcars-element lcars-u-5" *ngIf="hasError()">{{errorMessage}}</div>
+        <div id="input-error-message" class="lcars-element lcars-u-5 lcars-black-bg" *ngIf="!hasError()">&nbsp;</div>
+
         <div id="new-tournament-box">
             <div id="accordion-add-tournament" class="button" (click)="toggleNewTournamentForm()">
                 <i class="fa fa-plus-circle"></i> Add Tournament
@@ -20,7 +23,6 @@
                         <div id="button-add-tournament-cancel" class="lcars-element button" (click)="toggleNewTournamentForm()">Cancel</div>
                     </div>
                 </div>
-                <div class="lcars-element lcars-u-5">{{errorMessage}}</div>
             </div>
         </div>
 
