--- a/src/app/components/tournament/tournament-list/tournament-list.component.scss
+++ b/src/app/components/tournament/tournament-list/tournament-list.component.scss
@@ -3,7 +3,7 @@
         padding: 1rem;
 
         div#input-error-message {
-            margin-bottom: .25rem;
+            min-height: 3.25rem;
         }
 
         div#new-tournament-box {
