Refactored error message display

--- a/src/app/components/tournament/tournament-list/tournament-list.component.html
+++ b/src/app/components/tournament/tournament-list/tournament-list.component.html
@@ -3,7 +3,7 @@
         <h2 class="lcars-title lcars-u-5 right lcars-dodger-blue-bg lcars-black-color">Tournaments</h2>
 
         <div id="input-error-message">
-            <div class="lcars-element lcars-u-5" *ngIf="hasError(); else noInputErrorMessage">{{errorMessage}}</div>
+            <div class="lcars-element lcars-u-5" *ngIf="hasError()">{{errorMessage}}</div>
         </div>
 
         <div id="new-tournament-box">
