--- a/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.html
+++ b/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.html
@@ -1,7 +1,7 @@
-<ul>
-    <li><a href="#rr-grid">Round robin grid</a></li>
-    <li><a href="#rr-match-sheet">Round robin match sheet</a></li>
-    <li><a href="#event-player-list">Event player list</a></li>
-    <li><a href="#tournament-list">Tournament List</a></li>
-    <li><a href="#header">Header</a></li>
-</ul>
+<nav>
+    <li><a href="rr-grid">Round robin grid</a></li>
+    <li><a href="rr-match-sheet">Round robin match sheet</a></li>
+    <li><a href="event-player-list">Event player list</a></li>
+    <li><a href="tournament-list">Tournament List</a></li>
+    <li><a href="header">Header</a></li>
+</nav>
