Back to hash strategy

--- a/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.html
+++ b/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.html
@@ -1,7 +1,7 @@
 <nav>
-    <li><a href="dashboard">Dashboard/Home Page</a></li>
-    <li><a href="rr-grid">Round robin grid</a></li>
-    <li><a href="rr-match-sheet">Round robin match sheet</a></li>
-    <li><a href="event-player-list">Event player list</a></li>
-    <li><a href="header">Header</a></li>
+    <li><a href="#dashboard">Dashboard/Home Page</a></li>
+    <li><a href="#rr-grid">Round robin grid</a></li>
+    <li><a href="#rr-match-sheet">Round robin match sheet</a></li>
+    <li><a href="#event-player-list">Event player list</a></li>
+    <li><a href="#header">Header</a></li>
 </nav>
