Display event name from database, not challonge

--- a/apps/ubipong-ui/src/app/pages/round-robin-match-sheet/round-robin-match-sheet.component.html
+++ b/apps/ubipong-ui/src/app/pages/round-robin-match-sheet/round-robin-match-sheet.component.html
@@ -1,6 +1,6 @@
 <div id="round-robin-match-sheet">
   <div *ngFor="let mg of matchGroupList; let i = index">
-    <h2>{{event?.challongeTournament?.name}}</h2>
+    <h2>{{event?.name}}</h2>
     <table>
       <tr><th *ngFor="let gh of gameHeader()">{{gh}}</th></tr>
       <ng-container *ngFor="let m of mg">
